# roland

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Jenkinsfile  LICENSE-MIT  README.md  ast.css  games.sh  justfile  pp.rol  rolandc_dhat  rustfmt.toml  samples.sh  test.sh
import_test/: final.rol  main.rol  main.wat  other.rol
lib/: amd64.rol  dynarray.rol  hashmap.rol  malloc.rol  microw8.rol  number_to_string.rol  print.ro  print.rol  raylib.rol  shared.rol  wasi.rol  wasm4.rol  wasm_shared.rol
roland-vscode/: .vscodeignore  language-configuration.json  package-lock.json  package.json  tsconfig.json  tsfmt.json  vsc-extension-quickstart.md
roland_site/: editor.js  index.html  index.js  package-lock.json  package.json  stylesheet.css
roland_test_runner/: Cargo.toml
roland_test_runner/src/: main.rs
rolandc/: Cargo.toml
rolandc/fuzz/: Cargo.toml
rolandc/fuzz/fuzz_targets/: text.rs  tokens.rs
rolandc/src/: add_virtual_variables.rs  aggregate_literal_lowering.rs  compile_consts.rs  compile_globals.rs  const_and_sizeof_lowering.rs  const_lowering.rs  constant_folding.rs  constant_propagation.rs  dead_code_elimination.rs  defer.rs  disjoint_set.rs  dominators.rs  enum_and_pointer_lowering.rs  enum_lowering.rs  error_handling.rs  escape_analysis.rs  explicit_lval_to_rval.rs  expression_hoisting.rs  for_loop_lowering.rs  html_debug.rs  imports.rs  interner.rs  lex.rs  lib.rs  linearize.rs  logical_op_lowering.rs  loop_lowering.rs  lower_aggregate_access.rs  lower_transmutes_requiring_load.rs  main.rs  monomorphization.rs  named_argument_lowering.rs  parse.rs  pp.rs  pre_backend_lowering.rs  pre_wasm_lowering.rs  propagation.rs  regalloc.rs  size_info.rs  source_info.rs  (+9 more)
rolandc/src/backend/: linearize.rs  liveness.rs  mod.rs  pointer_analysis.rs  qbe.rs  regalloc.rs  wasm.rs
rolandc/src/semantic_analysis/: definite_assignment.rs  mod.rs  name_and_type_resolution.rs  type_and_procedure_info.rs  type_inference.rs  type_variables.rs  validator.rs
rolandc/src/wasm_backend/: mod.rs  wasm_emitter.rs  wast_emitter.rs
rolandc_cli/: Cargo.toml
rolandc_cli/src/: main.rs  syscall.s
rolandc_lsp/: Cargo.toml
rolandc_lsp/src/: goto_definition.rs  main.rs
rolandc_wasm/: .jshintrc  Cargo.toml  index.html  index.js  stylesheet.css
rolandc_web/: Cargo.toml
rolandc_web/pkg/: package-lock.json  package.json
rolandc_web/src/: lib.rs
tests/: access_global_after_set_elsewhere.rol  addressof_unknown_size.rol  arity.rol  arity_generics.rol  array_length_field.rol  array_length_mismatch.rol  array_too_long.rol  array_type_inference.rol  assignment.rol  assignment_to_constant.rol  bad_assignments.rol  bad_extend.rol  bad_field_access.rol  bad_field_access_array.rol  bad_inference_across_locals.rol  bad_inference_across_multiple_locals.rol  bad_struct_literals.rol  basic_procedure_item_with_variable_shadowing.rol  basic_procedure_pointer.rol  bitwise.rol  block.rol  break_continue_no_loop.rol  call_non_procedure.rol  calling_main.rol  calling_proc_from_func.rol  calling_proc_wrong_type.rol  cant_propagate_escaping_partial_var.rol  cant_propagate_escaping_var.rol  cant_propagate_partial_update_var.rol  cant_propagate_when_reaching_partial_def.rol  checked_negation.rol  comparison_ops.rol  complex_transmute.rol  complicated_inference_unary_negate.rol  (+165 more)
(+505 files in other folders)
