[package]
name = "roland_test_runner"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]
edition = "2021"

[dependencies]
pico-args = { version = "0.5", default-features=false, features=[] }
similar-asserts = "1"
os_pipe = "1"
rayon = "1"
termcolor = "1"
rolandc = { path = "../rolandc" }
