[package]
name = "rolandc"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]
edition = "2024"

[dependencies]
arrayvec = "0.7"
unicode-ident = "1"
indexmap = "2"
include_dir = "0.7"
wasm-encoder = "0.246"
slotmap = { git = "https://github.com/DenialAdams/slotmap.git", branch = "rayon", features = ["rayon"] }
bitvec = "1"
hashbrown = "0.17"
memchr = "2"
rayon = "1"
