[package]
name = "rolandc_cli"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]
edition = "2024"

[dependencies]
pico-args = { version = "0.5", default-features=false, features=[] }
rolandc = { path = "../rolandc" }
dhat = { version = "0.3", optional = true }
libwild = "0.7"

[features]
dhat-heap = ["dep:dhat"]
