[package]
name = "rolandc_lsp"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]
edition = "2024"

[dependencies]
parking_lot = { version = "0.12", features = ["nightly"] }
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["io-std", "rt", "rt-multi-thread", "macros"] }
rolandc = { path = "../rolandc" }
