[package]
name = "rolandc_web"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rolandc = { path = "../rolandc" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "Node", "HtmlElement", "HtmlInputElement"] }
wasmprinter = "0.215"
